feat: :sparkles: Se creo la barra de navegacion y su icono.
se le agregaron estilos y tama;os etc.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="divlogo">
+            <img src="storage/img/FondoPlaneta.jpg">
+        </div>
+        <div class="divmenu">
+            <ul class="ul__menu">
+                <li>Work</li>
+                <li>About</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+    </header> 
+
+
 </body>
 </html>
