feat: :sparkles: Se agregaron los textos centrales.
Se agregaron los textos centrales y tambien se les dio sus correspondientes atributos.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
             </ul>
         </div>
     </header> 
+    
+    <main class="main">
+        <section class="section__home">
+            <article class="article__home">
+                <span>Linus Kigai</span>
+                <h1>Bringin Concept to Life</h1>
+                <p>Lörem ipsum ditijybel beras fassade. Prel munira. Transperson bere då heterovalens. Kiling intraktig. Plasm ång refunde krobåling.</p>
+            </article>
+        </section>
+    </main>
 
 
 </body>
