feat: :sparkles: Se configuraron las medidas.
Se configuraron las medidas. para que pa pagina pueda visualizarse bien en cualquier dispositivo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="divlogo">
-            <img src="storage/img/FondoPlaneta.jpg">
+            <img src="storage/img/Ellipse1.png">
         </div>
         <div class="divmenu">
             <ul class="ul__menu">
