feat: :art: agregar imagen

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
         <img src="storage/img/Ellipse 4.png">
         <img src="storage/img/Ellipse 5.png">
         <img src="storage/img/Ellipse 6.png">
-        <img src="storage/img/Ellipse 7.png">
-        
-        
+        <img src="storage/img/Ellipse 7.png">   
     </section>
+    <section class="my_about">
+            <img src="storaged/img/banner2.png">
+    </section>
+    <main>
+
+    <footer></footer>
 
 
 
